from fake_simulator.messages.healthcheck_pb2 import (HealthStatus,
                                                                  PingHealthSOToMSO,
                                                                  PongHealthMSOToSO,
                                                                  PingHealthMSOToModel,
                                                                  PongHealthModelToMSO)
from fake_simulator.messages.lifecycle_pb2 import (EnvironmentVariable,
                                                                ModelConfiguration,
                                                                DeployModels,
                                                                ReadyForProcessing,
                                                                ModelsReady,
                                                                SimulationDone,
                                                                UnhealthyModelStatus,
                                                                UnhealthyModel,
                                                                TerminationStatus,
                                                                ModelHasTerminated,
                                                                AllModelsHaveTerminated)
